# bazel-python-rust-r3

./: .gitignore  1  MODULE.bazel  README.md
cpp/: BUILD.bazel  fibx.cc
py/: BUILD.bazel  fib_cpp_offload.py  fib_python_only.py  fib_rust_offload.py  hello.py
rust/: BUILD.bazel  fib.rs  lib.rs  main  main.rs
