load("@rules_python//python:defs.bzl", "py_binary") 

py_binary(
    name = "fib_rust_offload", 
    srcs = ["fib_rust_offload.py"],
    deps = [
        "//rust:rust_fib", 
    ], 
)

# py_binary(
#     name = "fib_python_only", 
#     srcs = ["fib_python_only.py"],
# )

# py_binary(
#     name = "fib_cpp_offload", 
#     srcs = ["fib_cpp_offload.py"],
#     deps = [
#         "//cpp:fib_module", 
#     ], 
# )

#--------------------------

# py_binary(
    # name = "hello", 
#    srcs = ["hello.py"],

#    main = "hello.py",
#    deps = [
#     "//cpp:add_module"
#    requirement("sys"),
    #requirement("pathlib"),
#    ],
#    deps = [
#        "//cpp:add_module" 
#    ],
#    data = [
#        "//cpp:add_module_so"
    #],


# )